# finance

./: .cursorrules  .gitignore  MOBILE_SETUP.md  Puglia_Guide.html  Puglia_Premium_Guide.html  README.md  extract_outline.py  fix_guide.py  generate_luxury_guide.py  guide_outline.json  implementation_plan.md  inject.py  next_steps.md  parse_guide.py  parsed_guide.json  puglia-guide-ruta-e.html  puglia-guide.html  puglia-guide.txt  puglia-map.html  puglia-planning.md  redesign_pdf.py  start_dashboard.bat  test_result.txt
backend/: benchmark.py  ms_page.html  prewarm_cache.py  pyproject.toml  res.json  rewrite_notebook.py  test_ms.py  test_ms3.py  test_ms_patch.py  test_yf_advanced.py  test_yf_advanced2.py  test_yf_provider_final.py
backend/app/: __init__.py  charts.py  client.py  client_async.py  client_v2.py  main.py  main_v2.py
backend/app/api/: __init__.py  endpoints.py
backend/app/schemas/: __init__.py  portfolio.py
backend/app/services/: __init__.py  cache_store.py  core_portfolio.py  data_providers.py  data_providers_async.py  finect_analyzer.py  finect_provider.py  ft_provider.py  functions_fund.py  fund_classifier.py  http_client.py  morningstar_analyzer.py  opportunity_scanner.py  persistence_service.py  portfolio.py  portfolio_service.py  portfolio_service_v2.py  region_normalizer.py  tax_calculator.py  utils.py
backend/app/services/deprecated/: __init__.py  background_calculator.py  finance.ipynb  finect_scraper.py  functions_portfolio.py  morningstar_analyzer.py  myinvestor_parser.py  (+3 more)
backend/notebooks/: analisis_fondo_detallado.ipynb  ejemplos_arquitectura.ipynb  estrategia_proveedores.ipynb  fund_analysis.ipynb  portfolio_tracker.ipynb  portfolio_tracker.py
backend/tests/: smoke_test.py  test.bat  test.py  test_capture.py  test_endpoints.py  test_fastapi.py  test_finect.py  test_finect_2.py  test_finect_initial_state.py  test_finect_url.py  test_ft_provider.py  test_get_positions.py  test_light.py  test_monthly_contributions.py  test_monthly_vs_positions.py  test_ms2.py  test_mstar.py  test_nav_providers.py  test_per_fund_nav_consistency.py  test_position_consistency.py  test_slug.html  test_transfer_detection.py
(+118 files in other folders)
