[tool.poetry]
package-mode = false
name = "portfolio-tracker-api"
version = "0.1.0"
description = "FastAPI backend for Portfolio Tracker Dashboard"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pandas = ">=2.0.0"
mstarpy = ">=9.0.2"
playwright = "*"
plotly = "^6.7.0"
seaborn = "^0.13.2"
webdriver-manager = "^4.0.2"
yfinance = "^1.2.2"
httpx = "^0.28.1"
requests = "*"
python-multipart = "*"
openpyxl = "^3.1.5"
jupyter = "^1.1.1"
nbformat = "^5.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
